# BoostAsioWebApi-VersionOne

./: .gitignore  CMakeLists.txt  README.md  advance_person.md  file_tarball.md  meson.build  meson.options  person.md  server.md
files/: data.json
include/: context.hpp  router.hpp
include/controllers/: abstract_controller.hpp  interface_controller.hpp  person_controller.hpp
include/controllers/file/: file_controller.hpp
include/controllers/person/: person_controller.hpp
include/controllers/tarball/: tarball_controller.hpp
include/controllers/tarball_gzip/: tarball_gzip_controller.hpp
include/models/person/: person.hpp
include/serializers/: person_serializer.hpp
include/serializers/person/: person_serializer.hpp
include/server/: abstract_server.hpp  async_accept_server.hpp  block_accept_server.hpp  interface_server.hpp
include/services/: interface_person_service.hpp  person_service.hpp
include/services/advance_person/: advance_person_service.hpp
include/services/file/: file_service.hpp
include/services/person/: person_service.hpp
include/services/tarball/: tarball_service.hpp
include/services/tarball_gzip/: tarball_gzip_service.hpp
src/: context.cpp  main.cpp  router.cpp
src/controllers/: abstract_controller.cpp  person_controller.cpp
src/controllers/file/: file_controller.cpp
src/controllers/person/: person_controller.cpp
src/controllers/tarball/: tarball_controller.cpp
src/controllers/tarball_gzip/: tarball_gzip_controller.cpp
src/models/: person.cpp
src/models/person/: person.cpp
src/serializers/: person_serializer.cpp
src/serializers/person/: person_serializer.cpp
src/server/: abstract_server.cpp  async_accept_server.cpp  block_accept_server.cpp
src/services/: person_service.cpp
src/services/advance_person/: advance_person_service.cpp
src/services/file/: file_service.cpp
src/services/person/: person_service.cpp
src/services/tarball/: tarball_service.cpp
src/services/tarball_gzip/: tarball_gzip_service.cpp
tests/: README.md  test_api_advance_person.py  test_api_file.py  test_api_person.py
